--- a/Rework/public/src/stylesheet/main/main/main.css
+++ b/Rework/public/src/stylesheet/main/main/main.css
@@ -439,8 +439,10 @@ html body #small-window {
   z-index: 5;
   top: 45vh;
   left: calc(50vw - 240px);
-  width: 600px;
+  width: auto;
+  max-width: 45vw;
   height: auto;
+  padding: 25px;
   font-size: 14px;
   border-radius: 3px;
   border: 1px solid var(--info-banner-border);
@@ -450,32 +452,47 @@ html body #small-window {
 }
 html body #small-window #small-window-content #small-window-header {
   display: flex;
+  margin-bottom: 10px;
+}
+html body #small-window #small-window-content #small-window-header #small-window-header {
+  font-size: 18px;
+  margin-left: 12px;
+  margin-top: -3px;
+}
+html body #small-window #small-window-content #small-window-description {
+  margin-bottom: 10px;
 }
 html body #small-window #small-window-content #small-window-button {
   display: flex;
   width: 120px;
   height: 35px;
+  margin-top: 20px;
 }
-html body #small-window #small-window-content #small-window-button #small-window-main-button {
+html body #small-window #small-window-content #small-window-button button {
   position: relative;
   cursor: pointer;
-  color: var(--text-main-button);
-  background: var(--bg-main-button);
   border: 1px solid transparent;
   border-radius: 5px;
   background-clip: padding-box;
-  transition: 0.2s;
+  padding: 0 20px 0 20px;
 }
-html body #small-window #small-window-content #small-window-button #small-window-main-button::after {
+html body #small-window #small-window-content #small-window-button button::after {
   position: absolute;
   top: -1px;
   bottom: -1px;
   left: -1px;
   right: -1px;
-  background: var(--bg-after-main-button);
   content: "";
   z-index: -1;
   border-radius: 5px;
+}
+html body #small-window #small-window-content #small-window-button #small-window-main-button {
+  margin-right: 25px;
+  background: var(--bg-main-button);
+  transition: 0.2s;
+}
+html body #small-window #small-window-content #small-window-button #small-window-main-button::after {
+  background: var(--bg-after-main-button);
 }
 html body #small-window #small-window-content #small-window-button #small-window-main-button:hover {
   background-color: var(--bg-hover-main-button);
@@ -486,26 +503,16 @@ html body #small-window #small-window-content #small-window-button #small-window
   background-color: var(--bg-active-main-button);
   transition: 0.2s;
 }
+html body #small-window #small-window-content #small-window-button #small-window-main-button a {
+  color: var(--text-main-button);
+}
 html body #small-window #small-window-content #small-window-button #small-window-close-button {
-  position: relative;
-  cursor: pointer;
   color: var(--text-sec-button);
   background: var(--bg-sec-button);
-  border: 1px solid transparent;
-  border-radius: 5px;
-  background-clip: padding-box;
   transition: 0.2s;
 }
 html body #small-window #small-window-content #small-window-button #small-window-close-button::after {
-  position: absolute;
-  top: -1px;
-  bottom: -1px;
-  left: -1px;
-  right: -1px;
   background: var(--bg-after-sec-button);
-  content: "";
-  z-index: -1;
-  border-radius: 5px;
 }
 html body #small-window #small-window-content #small-window-button #small-window-close-button:hover {
   background-color: var(--bg-hover-sec-button);
