--- a/Rework/public/src/stylesheet/main/main/main.scss
+++ b/Rework/public/src/stylesheet/main/main/main.scss
@@ -421,8 +421,10 @@ html body {
         z-index: 5;
         top: 45vh;
         left: calc(50vw - 240px);
-        width: 600px;
+        width: auto;
+        max-width: 45vw;
         height: auto;
+        padding: 25px;
         font-size: 14px;
         border-radius: 3px;
         border: 1px solid var(--info-banner-border);
@@ -431,28 +433,43 @@ html body {
         #small-window-content {
             #small-window-header {
                 display: flex;
+                margin-bottom: 10px;
+                #small-window-header {
+                    font-size: 18px;
+                    margin-left: 12px;
+                    margin-top: -3px;
+                }
+            }
+            #small-window-description {
+                margin-bottom: 10px;
             }
             #small-window-button {
                 display: flex;
                 width: 120px;
                 height: 35px;
-                #small-window-main-button {
+                margin-top: 20px;
+                button {
                     position: relative;
                     cursor: pointer;
-                    color: var(--text-main-button);
-                    background: var(--bg-main-button);
                     border: 1px solid transparent;
                     border-radius: 5px;
                     background-clip: padding-box;
-                    transition: .2s;
+                    padding: 0 20px 0 20px;
                     &::after {
                         position: absolute;
                         top: -1px; bottom: -1px;
                         left: -1px; right: -1px;
-                        background: var(--bg-after-main-button);
                         content: '';
                         z-index: -1;
                         border-radius: 5px;
+                    }
+                }
+                #small-window-main-button {
+                    margin-right: 25px;
+                    background: var(--bg-main-button);
+                    transition: .2s;
+                    &::after {
+                        background: var(--bg-after-main-button);
                     }
                     &:hover {
                         background-color: var(--bg-hover-main-button);
@@ -463,24 +480,16 @@ html body {
                         background-color: var(--bg-active-main-button);
                         transition: .2s;
                     }
+                    a {
+                        color: var(--text-main-button);
+                    }
                 }
                 #small-window-close-button {
-                    position: relative;
-                    cursor: pointer;
                     color: var(--text-sec-button);
                     background: var(--bg-sec-button);
-                    border: 1px solid transparent;
-                    border-radius: 5px;
-                    background-clip: padding-box;
                     transition: .2s;
                     &::after {
-                        position: absolute;
-                        top: -1px; bottom: -1px;
-                        left: -1px; right: -1px;
                         background: var(--bg-after-sec-button);
-                        content: '';
-                        z-index: -1;
-                        border-radius: 5px;
                     }
                     &:hover {
                         background-color: var(--bg-hover-sec-button);
