--- a/Rework/public/src/stylesheet/index/index.css
+++ b/Rework/public/src/stylesheet/index/index.css
@@ -33,7 +33,8 @@ html body main #profile-container {
   top: 15px;
   left: 0;
   width: 210px;
-  backdrop-filter: blur(100px);
+  -webkit-backdrop-filter: blur(100px);
+          backdrop-filter: blur(100px);
   border: 1px solid var(--border-color);
   border-left: none;
   border-top-right-radius: 10px;
@@ -80,7 +81,8 @@ html body main #help-container {
   left: 0;
   width: 205px;
   height: 148px;
-  backdrop-filter: blur(100px);
+  -webkit-backdrop-filter: blur(100px);
+          backdrop-filter: blur(100px);
   border: 1px solid var(--border-color);
   border-left: none;
   border-top-right-radius: 10px;
@@ -128,7 +130,8 @@ html body main #settings-container {
   bottom: 14px;
   left: 0;
   height: 49px;
-  backdrop-filter: blur(100px);
+  -webkit-backdrop-filter: blur(100px);
+          backdrop-filter: blur(100px);
   border: 1px solid var(--border-color);
   border-left: none;
   border-top-right-radius: 10px;
@@ -171,6 +174,9 @@ html body main #settings-container #settings-content #change-language #set-lang-
 }
 html body main #settings-container #settings-content #change-language:hover #set-lang-text {
   display: block;
+}
+html body main #settings-container #settings-content #change-language a {
+  cursor: not-allowed;
 }
 html body main #settings-container #settings-content #notification #set-note-on {
   display: block;
@@ -239,6 +245,9 @@ html body main #settings-container #settings-content #comment-settings #set-comm
 html body main #settings-container #settings-content #comment-settings:hover #set-comm-text {
   display: block;
 }
+html body main #settings-container #settings-content #comment-settings a {
+  cursor: not-allowed;
+}
 html body main #settings-container #settings-content #developer-mode #set-dev-mde-text, html body main #settings-container #settings-content #developer-settings #set-dev-text {
   display: none;
 }
@@ -254,11 +263,17 @@ html body main #settings-container #settings-content #developer-settings #set-de
 html body main #settings-container #settings-content #developer-settings #set-dev-text {
   color: var(--accent-default);
 }
+html body main #settings-container #settings-content #developer-settings a {
+  cursor: not-allowed;
+}
 html body main #settings-container #settings-content #more-settings #set-more-text {
   display: none;
 }
 html body main #settings-container #settings-content #more-settings:hover #set-more-text {
   display: block;
+}
+html body main #settings-container #settings-content a {
+  cursor: not-allowed;
 }
 html body main form {
   width: 550px;
@@ -266,7 +281,8 @@ html body main form {
   margin-left: -533px;
   padding-left: 100px;
   border-radius: 5px;
-  backdrop-filter: blur(75px);
+  -webkit-backdrop-filter: blur(75px);
+          backdrop-filter: blur(75px);
   z-index: 4;
 }
 html body main form #main-content {
@@ -276,6 +292,14 @@ html body main form #main-content {
 }
 html body main form #main-content #post-url #url-input {
   margin-top: -8px;
+}
+html body main form #main-content #post-url #url-input:-moz-placeholder-shown + #clearButton {
+  opacity: 0;
+  pointer-events: none;
+}
+html body main form #main-content #post-url #url-input:-ms-input-placeholder + #clearButton {
+  opacity: 0;
+  pointer-events: none;
 }
 html body main form #main-content #post-url #url-input:placeholder-shown + #clearButton {
   opacity: 0;
@@ -370,7 +394,8 @@ html body main form #main-content #login-data #username #profileDropdown #profil
   left: 156px;
   border: 1px solid var(--info-banner-border);
   background-color: var(--dropdown-bg);
-  backdrop-filter: blur(100px);
+  -webkit-backdrop-filter: blur(100px);
+          backdrop-filter: blur(100px);
   border-radius: 5px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 2;
@@ -413,7 +438,8 @@ html body main form #main-content #login-data #username #searchProfile #searchPr
   margin-left: 1px;
   border: 1px solid var(--info-banner-border);
   background-color: var(--dropdown-bg);
-  backdrop-filter: blur(100px);
+  -webkit-backdrop-filter: blur(100px);
+          backdrop-filter: blur(100px);
   border-radius: 5px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
@@ -448,6 +474,14 @@ html body main form #main-content #login-data #password {
 html body main form #main-content #login-data #password #password-form {
   width: 160px;
   padding-right: 40px;
+}
+html body main form #main-content #login-data #password #password-form:-moz-placeholder-shown + #togglePW {
+  opacity: 0;
+  pointer-events: none;
+}
+html body main form #main-content #login-data #password #password-form:-ms-input-placeholder + #togglePW {
+  opacity: 0;
+  pointer-events: none;
 }
 html body main form #main-content #login-data #password #password-form:placeholder-shown + #togglePW {
   opacity: 0;
@@ -484,7 +518,20 @@ html body main form #main-content #additional-settings {
   padding-bottom: 20px;
 }
 html body main form #main-content #additional-settings[open] summary ~ * {
-  animation: sweep 0.3s ease-in-out;
+  -webkit-animation: sweep 0.3s ease-in-out;
+          animation: sweep 0.3s ease-in-out;
+}
+@-webkit-keyframes sweep {
+  0% {
+    opacity: 0;
+    transform: translateY(-3px);
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 @keyframes sweep {
   0% {
@@ -712,8 +759,9 @@ html body #legal-note {
 html body #legal-note a {
   color: var(--text-note-color);
   text-decoration: underline;
-  text-decoration-style: wavy;
-  text-decoration-color: var(--selection-bg-color);
+  -webkit-text-decoration-style: wavy;
+          text-decoration-style: wavy;
+  -webkit-text-decoration-color: var(--selection-bg-color);
+          text-decoration-color: var(--selection-bg-color);
 }
-
 /*# sourceMappingURL=index.css.map */
